[tool.poetry]
name = "mojo-interop"
description = "Automation Mojo Interop Extensions"
version = "1.3.7"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-interop"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rpyc = "^5.3.1"
pexpect = "^4.8.0"
psutil = "^5.9.6"
mojo-errors = ">=1.3.0 <1.4.0"
mojo-networking = ">=1.3.0 <1.4.0"
mojo-xmodules = ">=1.3.0 <1.4.0"
mojo-credentials = ">=1.3.0 <1.4.0"
mojo-landscaping = ">=1.3.1 <1.4.0"
mojo-results = ">=1.3.1 <1.4.0"
mojo-runtime = ">=1.3.0 <1.4.0"
mojo-testplus = ">=1.3.1 <1.4.0"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
