[tool.poetry]
name = "mojo-interop"
description = "Automation Mojo Interop Extensions"
version = "1.3.77"

authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-interop"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rpyc = "^6.0.0"
pexpect = "^4.8.0"
psutil = "^5.9.6"
mojo-errors = ">=1.3.9 <1.4.0"
mojo-networking = ">=1.3.6 <1.4.0"
mojo-xmodules = ">=1.3.23 <1.4.0"
mojo-config = ">=1.3.21 <1.4.0"
mojo-credentials = ">=1.3.17 <1.4.0"
mojo-landscaping = ">=1.3.7 <1.4.0"
mojo-results = ">=1.3.19 <1.4.0"
mojo-runtime = ">=1.3.30 <1.4.0"
mojo-testplus = ">=1.3.34 <1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
