[tool.poetry]
name = "mojo-interop"
description = "Automation Mojo Interop Extensions"
version = "2.0.2"

authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-interop"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rpyc = "^6.0.0"
pexpect = "^4.8.0"
psutil = "^5.9.6"
mojo-errors = ">=2.0.0 <2.1.0"
mojo-networking = ">=2.0.0 <2.1.0"
mojo-xmodules = ">=2.0.0 <2.1.0"
mojo-config = ">=2.0.0 <2.1.0"
mojo-credentials = ">=2.0.0 <2.1.0"
mojo-landscaping = ">=2.0.0 <2.1.0"
mojo-results = ">=2.0.0 <2.1.0"
mojo-runtime = ">=2.0.0 <2.1.0"
mojo-testplus = ">=2.0.1 <2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
